<resources>
    <string name="app_name">Task1</string>
    <string name="log_in">log In</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="decrees">-</string>
    <string name="increes">+</string>
    <string name="_0">0</string>
    <string name="go_to_cart_items">Go To Cart Items</string>
    <string name="submit_order">Submit Order</string>
</resources>