<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageViewItem"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleCart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/decreesCart"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="@string/decrees"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#000"
                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/quantatyCart"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|top"
                        android:text="@string/_0"
                        android:textColor="#A19F9F"
                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/increesCart"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="@string/increes"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#000"
                        android:textSize="50sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>